--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="dot yellow"></div>
                     <div class="dot green"></div>
                 </div>
-                <div class="terminal-title">hacker@spymc:~/pages$</div>
+                <div class="terminal-title"> ~/pages$</div>
             </div>
             
             <div class="ascii-art">
@@ -193,7 +193,7 @@
         const matrix = "ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789@#$%^&*(){}[]|\\:;\"'<>,.?/~`";
         const matrixArray = matrix.split("");
 
-        const fontSize = 16;
+        const fontSize = 17;
         const columns = canvas.width / fontSize;
 
         const drops = [];
