--- a/shere.html
+++ b/shere.html
@@ -24,7 +24,7 @@
       <img src="https://i.ibb.co/5gnj2zDJ/Screenshot-2025-09-17-202804.png" alt="Explorer world">
       <div class="label">
         <h1 class="title">Explorer world — by user</h1>
-        <div class="subtitle">An image-only preview with centered caption</div>
+        <div class="subtitle"></div>
       </div>
     </section>
 
@@ -32,7 +32,7 @@
       <img src="https://i.ibb.co/hxYTSjZ7/Screenshot-2025-09-17-202830.png" alt="Griefed chunks">
       <div class="label">
         <h1 class="title">Griefed & cropped chunks</h1>
-        <div class="subtitle">Cropped detail view — only text over the image</div>
+        <div class="subtitle">Cropped detail view</div>
       </div>
     </section>
 
@@ -40,7 +40,7 @@
       <img src="https://i.ibb.co/7dK5q1h5/Screenshot-2025-09-17-202852.png" alt="Builds">
       <div class="label">
         <h1 class="title">Builds</h1>
-        <div class="subtitle">Showcasing builds — image with minimal text</div>
+        <div class="subtitle">casing builds </div>
       </div>
     </section>
   </main>
